--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       --nav-bg: #252525;
     }
 
+    html, body {
+      overflow-x: hidden;
+    }
     body {
       font-family: 'Asul', -apple-system, BlinkMacSystemFont, segoe ui, Roboto, Oxygen, Ubuntu, Cantarell, open sans, helvetica neue, sans-serif;
       font-size: 18px;
@@ -36,6 +39,12 @@
       color: var(--text-color);
       background: var(--bg-color);
       transition: color 0.3s, background-color 0.3s;
+    }
+    @media (max-width: 600px) {
+      body {
+        max-width: 100vw;
+        margin: 0;
+      }
     }
 
     /* Paragraph justification and word-break behavior */
