--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
   </header>
 
     <section id="bio">
-        <p>Since April 2025, Shijie Xu is a postdoctoral researcher in <a href="https://onoda-lab.jp/">Onoda Lab</a> at <a href="https://www.global.hokudai.ac.jp/">Hokkaido University</a>. His research focuses on bioinformatics, computational chemistry, and deep learning. Check his <a href="https://xu-shi-jie.github.io/docs/resume.pdf">CV</a>.</p>   
+        <p>Since April 2025, Shijie Xu is a postdoctoral researcher in <a href="https://onoda-lab.jp/">Onoda Lab</a> at <a href="https://www.global.hokudai.ac.jp/">Hokkaido University</a>. His research focuses on bioinformatics, computational chemistry, and deep learning. Check his <a href="https://xu-shi-jie.github.io/resume.pdf">CV</a>.</p>   
         <p>
           <strong>E-mail:</strong>
           <span id="email">c2hpamllLnh1QGVlcy5ob2t1ZGFpLmFjLmpw</span>  <button onclick="decodeEmail()">Decode</button>
@@ -446,13 +446,13 @@
   <script>
   (async function renderPubs(){
     try {
-      const res = await fetch('/data/pubs.json', {cache: 'no-cache'});
+  const res = await fetch('/pubs.json', {cache: 'no-cache'});
       if (!res.ok) throw new Error('Failed to load publications metadata');
       const pubs = await res.json();
       // load journal metadata (impact factor)
       let journals = {};
       try {
-        const jr = await fetch('/data/journals.json', {cache: 'no-cache'});
+  const jr = await fetch('/journals.json', {cache: 'no-cache'});
         if (jr.ok) journals = await jr.json();
       } catch (e) {
         console.warn('Failed to load journals.json', e);
