add visitor counter

--- a/index.html
+++ b/index.html
@@ -349,11 +349,13 @@
   </section>
   <footer>
     <p style="text-align: center; font-size: small;">
-      &copy; 2022-2025 Shijie Xu. Hosted via <a href="https://docs.github.com/en/pages">GitHub Pages</a>.
+       &copy; 2022-2025 Shijie Xu. Hosted via <a href="https://docs.github.com/en/pages">GitHub Pages</a>. <span id="sfcu59wwp37g979n925g4ud2g1dyh2paa3n"></span>
     </p>
   </footer>
   </div>
   
+  <script type="text/javascript" src="https://counter1.optistats.ovh/private/counter.js?c=u59wwp37g979n925g4ud2g1dyh2paa3n&down=async" async></script>
+
   <script>
   function decodeEmail() {
     const encoded = "c2hpamllLnh1QGVlcy5ob2t1ZGFpLmFjLmpw";
