--- a/index.html
+++ b/index.html
@@ -339,10 +339,12 @@
     <ol id="pub-list" class="pub-list" aria-live="polite">
       <!-- publications will be rendered here from data/pubs.json -->
     </ol>
+    <p style="font-size: 0.85rem; color: #888; font-style: italic; margin-top: 0.5rem;">*Data sourced from Crossref and automatically updated via script.</p>
   </section>
 
   <section id="software">
     <h2>Software</h2>
+  <a href="https://github.com/xu-shi-jie/prime"  data-tooltip="Protein metal-binding site prediction." aria-describedby="tip-prime"><i class="fa-solid fa-file-lines" aria-hidden="true"></i> PRIME<span id="tip-prime" class="sr-only">PRIME — Protein metal-binding site prediction.</span></a>
   <a href="https://github.com/xu-shi-jie/pKALM" data-tooltip="Fast and accurate prediction of protein pKa." aria-describedby="tip-pkalm"><i class="fa-solid fa-file-lines" aria-hidden="true"></i> pKALM<span id="tip-pkalm" class="sr-only">pKALM — Fast and accurate prediction of protein pKa.</span></a>
   <a href="https://github.com/xu-shi-jie/revPKAD2" data-tooltip="Revised protein pKa database based on PKAD2." aria-describedby="tip-revpkad2"><i class="fa-solid fa-database" aria-hidden="true"></i> revPKAD2<span id="tip-revpkad2" class="sr-only">revPKAD2 — Revised protein pKa database based on PKAD2.</span></a>
   <a href="https://github.com/xu-shi-jie/PsiPartition" data-tooltip="More accurate partitioned models for phylogenetics." aria-describedby="tip-psipart"><i class="fa-solid fa-file-lines" aria-hidden="true"></i> PsiPartition<span id="tip-psipart" class="sr-only">PsiPartition — More accurate partitioned models for phylogenetics.</span></a>
