--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Asul:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Shijie Xu</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="keywords" content="protein structure prediction, metal binding sites, deep learning, molecular simulation">
   <style>
     :root {
