--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Asul:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>Shijie Xu</title>
+  <title>Shijie Xu - Bioinformatics & Deep Learning Researcher</title>
+  <meta name="description" content="Shijie Xu is a postdoctoral researcher at Hokkaido University, specializing in bioinformatics, computational chemistry, protein structure prediction, and deep learning for metal binding sites.">
+  <meta name="keywords" content="Shijie Xu, bioinformatics, protein structure prediction, metal binding sites, deep learning, molecular simulation, computational chemistry, pKa prediction, Hokkaido University">
+  <meta name="author" content="Shijie Xu">
+  <link rel="canonical" href="https://xu-shi-jie.github.io/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta name="keywords" content="protein structure prediction, metal binding sites, deep learning, molecular simulation">
+  
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://xu-shi-jie.github.io/">
+  <meta property="og:title" content="Shijie Xu - Bioinformatics & Deep Learning Researcher">
+  <meta property="og:description" content="Postdoctoral researcher specializing in bioinformatics, computational chemistry, and deep learning at Hokkaido University.">
+  <meta property="og:image" content="https://xu-shi-jie.github.io/docs/background-pkalm.jpg">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://xu-shi-jie.github.io/">
+  <meta name="twitter:title" content="Shijie Xu - Bioinformatics & Deep Learning Researcher">
+  <meta name="twitter:description" content="Postdoctoral researcher specializing in bioinformatics, computational chemistry, and deep learning at Hokkaido University.">
+  <meta name="twitter:image" content="https://xu-shi-jie.github.io/docs/background-pkalm.jpg">
   <style>
     :root {
       --text-color: #222;
@@ -300,9 +317,33 @@
       updateButtonText();
     });
   </script>
+  
+  <!-- Structured Data (Schema.org JSON-LD) for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Shijie Xu",
+    "url": "https://xu-shi-jie.github.io/",
+    "image": "https://xu-shi-jie.github.io/docs/background-pkalm.jpg",
+    "jobTitle": "Postdoctoral Researcher",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Hokkaido University",
+      "url": "https://www.global.hokudai.ac.jp/"
+    },
+    "alumniOf": "Hokkaido University",
+    "knowsAbout": ["Bioinformatics", "Computational Chemistry", "Deep Learning", "Protein Structure Prediction", "Metal Binding Sites"],
+    "sameAs": [
+      "https://orcid.org/0000-0001-6974-353X",
+      "https://github.com/xu-shi-jie",
+      "https://researchmap.jp/xushijie"
+    ]
+  }
+  </script>
 </head>
 <body>
-  <div class="hero"></div>
+  <div class="hero" role="banner"></div>
   <div class="content">
   <header>
     <div class="title-row">
@@ -326,13 +367,15 @@
     </div>
   </header>
 
+    <main>
     <section id="bio">
+        <h2 class="sr-only">About</h2>
         <p>Since April 2025, Shijie Xu is a postdoctoral researcher in <a href="https://onoda-lab.jp/">Onoda Lab</a> at <a href="https://www.global.hokudai.ac.jp/">Hokkaido University</a>. His research focuses on bioinformatics, computational chemistry, and deep learning. Check his <a href="https://xu-shi-jie.github.io/docs/resume.pdf">CV</a>.</p>   
         <p>
           <strong><span id="email-label">E-mail (base64):</span></strong>
           <span id="email">c2hpamllLnh1QGVlcy5ob2t1ZGFpLmFjLmpw</span>  <button onclick="decodeEmail()">Decode</button>
         </p>
-        <p><a href="https://orcid.org/0000-0001-6974-353X" class="footer-link"><i class="fa-brands fa-orcid fa-xl"></i></a><a href="https://github.com/xu-shi-jie" class="footer-link"><i class="fa-brands fa-github fa-xl"></i></a><a href="https://researchmap.jp/xushijie"><img src="https://researchmap.jp/img/logo_small.gif?1684478673" width=150px"/></a></p>
+        <p><a href="https://orcid.org/0000-0001-6974-353X" class="footer-link"><i class="fa-brands fa-orcid fa-xl"></i></a><a href="https://www.researchgate.net/profile/Shijie-Xu-14" class="footer-link"><i class="fa-brands fa-researchgate fa-xl"></i></a><a href="https://github.com/xu-shi-jie" class="footer-link"><i class="fa-brands fa-github fa-xl"></i></a><a href="https://researchmap.jp/xushijie"><img src="https://researchmap.jp/img/logo_small.gif?1684478673" width=150px"/></a></p>
       </section>
 
   <section id="pub">
@@ -360,6 +403,7 @@
     <p><a href="https://sites.google.com/eis.hokudai.ac.jp/exexphd-fellow/home">EXEX Fellowship</a> for supporting my research.
     </p>
   </section>
+  </main>
   <footer>
     <p style="text-align: center; font-size: small;">
        &copy; 2022-2025 Shijie Xu. Hosted via <a href="https://docs.github.com/en/pages">GitHub Pages</a>. <span id="sfcu59wwp37g979n925g4ud2g1dyh2paa3n"></span>
