fix counter bug

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
   </script>
 
   <script>
-    window.COUNTER_API_URL = 'https://page-counter-eight.vercel.app/api/counter';
+    window.COUNTER_API_URL = 'https://page-counter-eight.vercel.app/api/counter-neon';
     window.COUNTER_PREFIX = 'Visitors: ';
   </script>
   <script src="https://page-counter-eight.vercel.app/counter.js"></script>
