--- a/index.html
+++ b/index.html
@@ -238,15 +238,16 @@
     #software a {
       display: inline-flex;
       align-items: center; /* vertically center icon and text */
-      gap: 0.45rem; /* spacing between icon and text */
+      gap: 0.35rem; /* spacing between icon and text */
       margin: 0 0.5rem 0.5rem 0; /* right and bottom spacing for wrap */
       padding: 0.25rem 0.9rem;
-      border-radius: 999px; /* pill shape */
+      border-radius: 12px; /* moderate rounded corners */
       background: transparent;
       color: var(--text-color); /* keep text color consistent with surrounding text */
       text-decoration: none;
-      border: 1px solid currentColor; /* border matches text color (black or white depending on theme) */
-      transition: background-color 0.12s ease, transform 0.08s ease, box-shadow 0.12s ease;
+      border: 1.5px solid currentColor; /* border matches text color (black or white depending on theme) */
+      transition: background-color 0.12s ease, transform 0.08s ease, box-shadow 0.12s ease, border-color 0.12s ease;
+      font-size: 0.8rem; /* smaller text */
     }
 
     #software a:hover {
@@ -270,7 +271,7 @@
     }
     /* Icon spacing inside software links */
     #software a i {
-      font-size: 1em; /* match surrounding text size */
+      font-size: 0.85em; /* smaller icon size */
       line-height: 1; /* prevent extra height */
       vertical-align: middle;
       /* margin-right removed in favor of gap on the anchor */
@@ -430,6 +431,7 @@
   <a href="https://github.com/xu-shi-jie/revPKAD2" data-tooltip="Revised protein pKa database based on PKAD2." aria-describedby="tip-revpkad2"><i class="fa-solid fa-database" aria-hidden="true"></i> revPKAD2<span id="tip-revpkad2" class="sr-only">revPKAD2 — Revised protein pKa database based on PKAD2.</span></a>
   <a href="https://github.com/xu-shi-jie/PsiPartition" data-tooltip="More accurate partitioned models for phylogenetics." aria-describedby="tip-psipart"><i class="fa-solid fa-file-lines" aria-hidden="true"></i> PsiPartition<span id="tip-psipart" class="sr-only">PsiPartition — More accurate partitioned models for phylogenetics.</span></a>
   <a href="https://github.com/xu-shi-jie/idp-elm" data-tooltip="Fast and accurate prediction of intrinsically disordered proteins (IDPs)." aria-describedby="tip-idpelm"><i class="fa-solid fa-file-lines" aria-hidden="true"></i> IDP-ELM<span id="tip-idpelm" class="sr-only">IDP-ELM — Fast and accurate prediction of intrinsically disordered proteins (IDPs).</span></a>
+  <a href="https://github.com/xu-shi-jie/spam-guard" data-tooltip="Intelligent spam detection for Thunderbird using ML." aria-describedby="tip-spamguard"><i class="fa-solid fa-wrench" aria-hidden="true"></i> Spam Guard<span id="tip-spamguard" class="sr-only">Spam Guard — Intelligent spam detection for Thunderbird using ML.</span></a>
   <a href="https://github.com/xu-shi-jie/husync" data-tooltip="Real-time directory sync tool written in Rust." aria-describedby="tip-husync"><i class="fa-solid fa-wrench" aria-hidden="true"></i> HUSync<span id="tip-husync" class="sr-only">HUSync — Real-time directory sync tool written in Rust.</span></a>
   <a href="https://github.com/xu-shi-jie/hokudai-dissertation" data-tooltip="Hokkaido University dissertation LaTeX template." aria-describedby="tip-dissertation"><i class="fa-solid fa-wrench" aria-hidden="true"></i> Dissertation LaTeX<span id="tip-dissertation" class="sr-only">Dissertation LaTeX — Hokkaido University dissertation LaTeX template.</span></a>
   <a href="https://github.com/xu-shi-jie/bib-journal-abbreviator" data-tooltip="Small tool to abbreviate journal names in BibTeX." aria-describedby="tip-refabbr"><i class="fa-solid fa-wrench" aria-hidden="true"></i> Refabbr<span id="tip-refabbr" class="sr-only">Refabbr — Small tool to abbreviate journal names in BibTeX.</span></a>
