--- a/index.html
+++ b/index.html
@@ -170,56 +170,59 @@
     .theme-toggle {
       background: none;
       border: none;
-      padding: 0;
+      padding: 0 0.15rem;
       cursor: pointer;
-      color: var(--text-color);
-      width: 2rem;
-      height: 2rem;
-      vertical-align: middle;
-      transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
       display: flex;
       align-items: center;
-      justify-content: center;
-      will-change: transform;
+      gap: 4px;
     }
-    
+
     .theme-toggle img {
-      width: 24px;
-      height: 24px;
-      transition: filter 0.25s cubic-bezier(0.4, 0, 0.2, 1), transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-      will-change: filter, transform;
+      display: block;
+      transition: width 0.35s cubic-bezier(0.4, 0, 0.2, 1),
+                  height 0.35s cubic-bezier(0.4, 0, 0.2, 1),
+                  opacity 0.35s ease,
+                  filter 0.35s ease;
+      will-change: width, height, opacity, filter;
+    }
+
+    /* Light mode: sun big, moon small */
+    .theme-toggle .sun {
+      width: 22px;
+      height: 22px;
+      opacity: 1;
+      filter: brightness(0) saturate(100%) invert(65%) sepia(80%) saturate(700%) hue-rotate(5deg) brightness(0.95);
     }
 
     .theme-toggle .moon {
-      display: block;
-      filter: brightness(0) saturate(100%) invert(45%) sepia(90%) saturate(600%) hue-rotate(180deg) brightness(0.9);
+      width: 11px;
+      height: 11px;
+      opacity: 0.45;
+      filter: brightness(0) saturate(100%) invert(45%) sepia(90%) saturate(400%) hue-rotate(180deg) brightness(0.85);
     }
 
-    .theme-toggle .sun {
-      display: none;
-    }
-
-    .theme-toggle:hover .moon {
-      filter: brightness(0) saturate(100%) invert(45%) sepia(90%) saturate(600%) hue-rotate(180deg) brightness(1.1) drop-shadow(0 0 4px #3399cc) drop-shadow(0 0 8px #3399cc);
-      transform: scale(1.1);
-    }
-
+    /* Dark mode: moon big, sun small */
     [data-theme="dark"] .theme-toggle .moon {
-      display: none;
+      width: 22px;
+      height: 22px;
+      opacity: 1;
+      filter: brightness(0) saturate(100%) invert(75%) sepia(60%) saturate(400%) hue-rotate(180deg) brightness(1.1);
     }
 
     [data-theme="dark"] .theme-toggle .sun {
-      display: block;
-      filter: brightness(0) saturate(100%) invert(55%) sepia(90%) saturate(600%) hue-rotate(360deg) brightness(0.95);
+      width: 14px;
+      height: 14px;
+      opacity: 0.45;
+      filter: brightness(0) saturate(100%) invert(65%) sepia(60%) saturate(400%) hue-rotate(5deg) brightness(0.9);
     }
 
-    [data-theme="dark"] .theme-toggle:hover .sun {
-      filter: brightness(0) saturate(100%) invert(55%) sepia(90%) saturate(600%) hue-rotate(360deg) brightness(1.1) drop-shadow(0 0 4px #dd8822) drop-shadow(0 0 8px #dd8822);
-      transform: scale(1.1);
+    /* Hover: slightly brighten the dominant icon */
+    .theme-toggle:hover .sun {
+      filter: brightness(0) saturate(100%) invert(65%) sepia(80%) saturate(700%) hue-rotate(5deg) brightness(1.15) drop-shadow(0 0 4px #ddaa22);
     }
-    
-    .theme-toggle:hover {
-      transform: scale(1.1);
+
+    [data-theme="dark"] .theme-toggle:hover .moon {
+      filter: brightness(0) saturate(100%) invert(75%) sepia(60%) saturate(400%) hue-rotate(180deg) brightness(1.3) drop-shadow(0 0 4px #7ab8d8);
     }
 
     .footer-link {
@@ -347,8 +350,8 @@
       <span style="margin-right: 0.75rem;">&gt;</span><span style="font-weight: 700;">Home</span><span style="margin: 0 0.75rem;">&gt;</span><a href="/posts/html/posts.html">Posts</a>
     </div>
     <button id="themeToggle" class="theme-toggle" onclick="toggleTheme()" title="Toggle theme">
-      <img src="docs/moon.svg" alt="Dark mode" class="moon">
       <img src="docs/sun.svg" alt="Light mode" class="sun">
+      <img src="docs/moon.svg" alt="Dark mode" class="moon">
     </button>
   </nav>
   <header>
